feat: added relic generation

--- a/src/main/resources/assets/echoes_of_the_elders/lang/en_us.json
+++ b/src/main/resources/assets/echoes_of_the_elders/lang/en_us.json
@@ -6,6 +6,7 @@
   "number.echoes_of_the_elders.int": "%d",
   "item.echoes_of_the_elders.shiny_ancient_stone_sword": "\u00A7a Shiny Ancient Stone Sword",
   "item.echoes_of_the_elders.ancient_stone_sword": "Ancient Stone Sword",
+  "item.echoes_of_the_elders.artifact_geode": "Artifact Geode",
   "item.echoes_of_the_elders.explorers_fruit": "Explorer's Fruit",
   "item.echoes_of_the_elders.vitality_pump": "Vitality Pump",
   "item.echoes_of_the_elders.portal_ring": "Portal Ring",
@@ -20,6 +21,7 @@
   "item.echoes_of_the_elders.molten_chamber_shot": "Molten Chamber Shot",
   "item.echoes_of_the_elders.scorchers_mitts": "Scorcher's Mitts",
   "item.echoes_of_the_elders.starfall_bow": "Starfall Bow",
+  "block.echoes_of_the_elders.artifact_geode_block": "Artifact Geode Ore",
   "block.echoes_of_the_elders.bear_trap_block": "Bear Trap",
   "block.echoes_of_the_elders.totem_spawn_block": "Elder Shrine",
   "block.echoes_of_the_elders.artifact_vault_block": "Artifact Vault",
@@ -121,6 +123,10 @@
   "ability.echoes_of_the_elders.mirror_image.info1": "refunds used <potion>potions</potion>",
   "ability.echoes_of_the_elders.bottomless_quiver.name": "Bottomless Quiver",
   "ability.echoes_of_the_elders.bottomless_quiver.info1": "<recharge>1</recharge> <arrow>Gale Arrow</arrow> per <WHITE>{duration}</WHITE>",
+  "info.echoes_of_the_elders.hidden_treasure.name": "Treasure Inside",
+  "info.echoes_of_the_elders.hidden_treasure.info1": "break open the geode",
+  "info.echoes_of_the_elders.hidden_treasure.info2": "by right clicking it with",
+  "info.echoes_of_the_elders.hidden_treasure.info3": "a pickaxe inside the inventory",
   "info.echoes_of_the_elders.glove.name": "Glove",
   "info.echoes_of_the_elders.glove.info1": "<on_hit>On-hit</on_hit> effects still apply",
   "info.echoes_of_the_elders.glove.info2": "when in the <WHITE>offhand</WHITE> slot",
